added web3modal commit#4

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <p id="hello-world"></p>
+    <button id="btn">Connect</button>
       <script src="dist/index.ts"></script>  # Simpler import!
   </body>
 </html>
