--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,11 @@
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML Example</title>
+  </head>
   <body>
-    <p id="hello-world"></p>
     <button id="btn">Connect</button>
-      <script src="dist/index.js"></script>  # Simpler import!
+    <span id="user">Hi</span>
+    <script type="module" src="dist/index.js"></script>  # Simpler import!
   </body>
 </html>
